# unified-llm

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: code_run.mdc  unified-llm-prd.mdc
examples/: README.md  __init__.py
examples/openai_like/: 01_basic_chat.py  02_tool_execution.py  03_multiple_tools.py  04_reasoning.py  05_basic_streaming.py  06_streaming_with_tools.py  07_streaming_reasoning.py  08_pattern_reasoning.py  09_multi_turn.py  10_complex_workflow.py  __init__.py  common.py  run_examples.py
src/unified_llm/: __init__.py  base.py  exceptions.py  models.py  openai_like.py  tool_executor.py  utils.py
src/unified_llm/providers/: __init__.py
src/unified_llm/providers/bedrock/: __init__.py  provider.py
src/unified_llm/providers/openai_like/: __init__.py  provider.py
